IN DEVELOPMENT ======= 1.3.0

- added: builders.schema supports join models
- added: controller.custom()
- added: controller.clear()
- added: controller.noClear()
- added: FrameworkImage.measure(callback)
- added: HttpFile.stream()
- added: HttpFile.measure(callback)

- updated: nosql (extended buffer)
- updated: builders.schema()
- updated: builders.defaults()
- updated: builders.prepare()
- updated: controller.validate()
- updated: utils.validate()
- updated: req.hostname()
- updated: controller.close([end])
- updated: utils.httpStatus()

- fixed: controller.database()
- fixed: mail.send();

- improvements: saving of memory
- improvements: utils.js

- documentation (add) HttpFile
- documentation (upd) How do "views" work?
- documentation (upd) How does authorization work?
- documentation (upd) FrameworkController
- documentation (upd) FrameworkViews
- documentation (upd) FrameworkController
- documentation (upd) Request.prototype

======= 1.2.9

- updated: utils.getContentType()
- updated: binary/empty-project minified debugging.js
- updated: NoSQL v2.0.2 (added: binary.update())
- updated: license

- fixed: framework.usage()
- fixed: framework.backup()
- fixed: template repository
- clean code

======= 1.2.8

- added: referer flag
- added: debugging.js
- added: default accepts *.mp4
- added: template supports rendering of other templates or views
- added: framework.stats.response.timeout
- added: framework.stats.response.notModified
- added: framework.isProcessed()
- added: Number.prototype.VAT
- added: Number.prototype.discount
- added: utils.send(name, [stream or filename], url, [callback], [headers], [method])
- added: utils.download(url, callback, [headers], [method], [params], [encoding])

- updated: framework.backup([callback], [url]);
- updated: NoSQL v2.0.0
- updated: builders.schema(), builders.defaults()
- updated: framework.usage()
- updated: utils.getContentType()
- updated: framework.eval() - framework can eval Function in its context