@@ -1,4 +1,3 @@
-
 var utils = require('../utils');
 var assert = require('assert');
 var framework = require('../index');
