@@ -7,6 +7,8 @@ IN DEVELOPMENT ======= 1.3.0
 - added: FrameworkImage.measure(callback)
 - added: HttpFile.stream()
 - added: HttpFile.measure(callback)
+- added: framework.onRequest(req, res)
+- added: framework.worker()
 
 - updated: nosql (extended buffer)
 - updated: builders.schema()
@@ -19,7 +21,7 @@ IN DEVELOPMENT ======= 1.3.0
 - updated: utils.httpStatus()
 
 - fixed: controller.database()
-- fixed: mail.send();
+- fixed: mail.send()
 
 - improvements: saving of memory
 - improvements: utils.js
